--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,48 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-ansi2html=1.9.1=py310h06a4308_0
-brotli-python=1.0.9=py310h6a678d5_7
-bzip2=1.0.8=h5eee18b_5
-ca-certificates=2024.3.11=h06a4308_0
-certifi=2024.2.2=py310h06a4308_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-click=8.1.7=py310h06a4308_0
-dash=2.14.2=py310h06a4308_0
-flask=2.2.5=py310h06a4308_0
-flask-compress=1.13=py310h06a4308_0
-idna=3.4=py310h06a4308_0
-importlib-metadata=7.0.1=py310h06a4308_0
-itsdangerous=2.0.1=pyhd3eb1b0_0
-jinja2=3.1.3=py310h06a4308_0
-ld_impl_linux-64=2.38=h1181459_1
-libffi=3.4.4=h6a678d5_0
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libstdcxx-ng=11.2.0=h1234567_1
-libuuid=1.41.5=h5eee18b_0
-markupsafe=2.1.3=py310h5eee18b_0
-ncurses=6.4=h6a678d5_0
-nest-asyncio=1.6.0=py310h06a4308_0
-openssl=3.0.13=h7f8727e_0
-packaging=23.1=py310h06a4308_0
-pip=23.3.1=py310h06a4308_0
-plotly=5.19.0=py310h2f386ee_0
-pysocks=1.7.1=py310h06a4308_0
-python=3.10.13=h955ad1f_0
-pytz=2023.3.post1=py310h06a4308_0
-readline=8.2=h5eee18b_0
-requests=2.31.0=py310h06a4308_1
-retrying=1.3.3=pyhd3eb1b0_2
-setuptools=68.2.2=py310h06a4308_0
-six=1.16.0=pyhd3eb1b0_1
-sqlite=3.41.2=h5eee18b_0
-tenacity=8.2.2=py310h06a4308_0
-tk=8.6.12=h1ccaba5_0
-typing_extensions=4.9.0=py310h06a4308_1
-tzdata=2024a=h04d1e81_0
-urllib3=2.1.0=py310h06a4308_1
-werkzeug=2.3.8=py310h06a4308_0
-wheel=0.41.2=py310h06a4308_0
-xz=5.4.6=h5eee18b_0
-zipp=3.17.0=py310h06a4308_0
-zlib=1.2.13=h5eee18b_0
+_libgcc_mutex==0.1
+_openmp_mutex==5.1
+ansi2html==1.9.1
+brotli-python==1.0.9
+bzip2==1.0.8
+ca-certificates==2024.3.11
+certifi==2024.2.2
+charset-normalizer==2.0.4
+click==8.1.7
+dash==2.14.2
+flask==2.2.5
+flask-compress==1.13
+idna==3.4
+importlib-metadata==7.0.1
+itsdangerous==2.0.1
+jinja2==3.1.3
+ld_impl_linux-64==2.38
+libffi==3.4.4
+libgcc-ng==11.2.0
+libgomp==11.2.0
+libstdcxx-ng==11.2.0
+libuuid==1.41.5
+markupsafe==2.1.3
+ncurses==6.4
+nest-asyncio==1.6.0
+openssl==3.0.13
+packaging==23.1
+pip==23.3.1
+plotly==5.19.0
+pysocks==1.7.1
+python==3.10.13
+pytz=2023.3.post1
+readline==8.2
+requests==2.31.0
+retrying==1.3.3
+setuptools==68.2.2
+six==1.16.0
+sqlite==3.41.2
+tenacity==8.2.2
+tk==8.6.12
+typing_extensions==4.9.0
+tzdata==2024a
+urllib3==2.1.0
+werkzeug==2.3.8
+wheel==0.41.2
+xz==5.4.6
+zipp==3.17.0
+zlib==1.2.13
